[build-system]
requires = ["setuptools>=68", "cffi>=1.16", "wheel"]
# Custom backend wraps setuptools.build_meta to honour the
# FL_PYTHON_PACKAGE_NAME env var (used by CI to produce the
# `foundry-local-sdk-winml` variant from the same source tree).
build-backend = "_build_backend"
backend-path = ["."]

[project]
name = "foundry-local-sdk"
version = "2.0.0.dev0"
description = "Foundry Local Python SDK (v2): in-process Python bindings for the Foundry Local native runtime."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Microsoft Corporation", email = "foundrylocaldevs@microsoft.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

# ORT/GenAI version pins below use sentinel ``0.0.0``. The real versions
# come from sdk_v2/deps_versions.json — the _build_backend rewrites these
# pins from JSON at wheel-build time. JSON is the single source of truth;
# bumping ORT versions is a one-file edit. The WinML wheel variant shares
# the same ORT/GenAI versions and only differs in the distribution name.
#
# If a wheel ever ships with ``==0.0.0`` it means the backend wasn't
# invoked (e.g. raw setuptools bypass) — pip install will fail loudly
# with "no matching version", which is the desired safety net.
dependencies = [
    "cffi>=1.16",
    "typing_extensions>=4.5",
    "pydantic>=2.0.0",
    "requests>=2.32.4",
    "openai>=2.24.0",
    "onnxruntime-gpu==0.0.0; platform_system == 'Linux'",
    "onnxruntime-core==0.0.0; platform_system != 'Linux'",
    "onnxruntime-genai-cuda==0.0.0; platform_system == 'Linux'",
    "onnxruntime-genai-core==0.0.0; platform_system != 'Linux'",
]

[project.urls]
Homepage = "https://github.com/microsoft/Foundry-Local"
Issues = "https://github.com/microsoft/Foundry-Local/issues"
Source = "https://github.com/microsoft/Foundry-Local"

[project.optional-dependencies]
numpy = ["numpy>=1.23"]
openai = ["openai>=1.0"]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[project.scripts]
foundry-local-install = "foundry_local_sdk._native.installer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"foundry_local_sdk" = ["py.typed"]
# The cffi extension (.pyd/.so/.dylib) sits directly under _native/.
# The platform-native runtime library lives in a per-RID subdir, e.g.
# _native/win-x64/foundry_local.dll. Subdirs use hyphens so they aren't
# importable as Python packages; ship them via recursive globs.
"foundry_local_sdk._native" = [
    "*.pyd",
    "*.so",
    "*.dylib",
    "*/*.dll",
    "*/*.pdb",
    "*/*.so",
    "*/*.so.*",
    "*/*.dylib",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not manual'"
markers = [
    "manual: destructive tests requiring manual setup; skipped by default. Opt in with -m manual.",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
